<resources>
    <string name="app_name">Binary Game</string>
    <string name="introduction">Introduction</string>
    <string name="intro_text">Play and be the first</string>
    <string name="intro">Binary is a system in which information can be expressed by combinations of the digits 0 and 1. Binary game helps you to convert decimal numbers into binary numbers.</string>
    <string name="intro_example">For Example:</string>
    <string name="zero">0</string>
    <string name="most">most</string>
    <string name="least">least</string>
    <string name="or">or</string>
    <string name="how_play">How to play</string>
    <string name="play_intro">Fill the table in horizontal and vertical directions. Train your brain and become a fast caster.</string>
    <string name="equals">equals</string>
    <string name="solution">solution</string>
    <string name="done">done</string>
    <string name="medium">medium</string>
    <string name="easy">easy</string>
    <string name="hard">hard</string>
    <string name="high_score">high scores</string>
    <string name="settings">settings</string>
    <string name="feedback">feedback</string>
    <string name="ex">ex.</string>
    <string name="give_up">give up</string>
    <string name="retry">retry</string>
    <string name="level">level</string>
    <string name="beginner">Beginner</string>
    <string name="inter">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="next">next</string>
    <string name="prev">previous</string>
    <string name="one">1</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="quit">quit</string>
    <string name="restart">restart</string>
    <string name="your_time">your time</string>
    <string name="show_table">show table</string>
    <string name="play">play</string>
    <string name="about">about</string>
    <string name="change">Change it to:</string>
    <string name="because">Because:</string>
    <string name="and">And</string>
    <string name="authors">This game was developed by students of Inha University in Tashkent (IUT).</string>
    <string name="thanks">Special thanks to Prof. A. Chong Koo who inspired us to build this game.</string>
    <string name="fill_mode">filling mode</string>
    <string name="fill_zeros">with zeros</string>
    <string name="fill_ones">with ones</string>
    <string name="highlight_mode">highlight answers</string>
    <string name="highlight">highlight</string>
    <string name="not_highlight">do not highlight</string>
    <string name="timer_mode">timer</string>
    <string name="visible">visible</string>
    <string name="invisible">invisible</string>
    <string name="scores">scores</string>
    <string name="scores_refreshed">Scores Refreshed</string>
</resources>
