<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/fill_mode"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="@string/fill_zeros"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/fill_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:tag="fill_mode"
                    android:theme="@style/MySwitch" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_ones"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/highlight_mode"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="@string/highlight"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/answer_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:tag="answer_mode"
                    android:theme="@style/MySwitch" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/not_highlight"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/timer_mode"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="@string/visible"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/timer_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:tag="timer_mode"
                    android:theme="@style/MySwitch" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invisible"
                    android:textAllCaps="true"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_mid" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/scores"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/transparent_button_drawable"
                    android:contentDescription="refresh"
                    android:onClick="refreshScore"
                    android:padding="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_refresh_button" />

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/transparent_button_drawable"
                    android:contentDescription="share"
                    android:padding="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_share"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>