<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/text_big"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#b71c1c" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center|top"
            android:padding="8dp"
            android:text="@string/intro_text"
            android:textAllCaps="true"
            android:textColor="#ffebee"
            android:textSize="@dimen/text_mid" />

        <LinearLayout
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/next"
                android:textColor="@color/red"
                android:textSize="@dimen/text_mid"
                android:textStyle="bold" />

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_next" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>