<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/authors"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_mid" />

            <ImageView
                android:layout_width="196dp"
                android:layout_height="196dp"
                android:layout_margin="16dp"
                android:contentDescription="inha_logo"
                android:src="@drawable/inha_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_mid" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/transparent_button_drawable"
                    android:contentDescription="mail"
                    android:onClick="feedbackMail"
                    android:padding="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_google_plus" />

                <ImageButton
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/transparent_button_drawable"
                    android:contentDescription="mail"
                    android:onClick="feedbackFacebook"
                    android:padding="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_facebook_logo" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>