<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:onClick="settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_drawable"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <View
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/ic_settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/text" />

    </LinearLayout>

    <LinearLayout
        android:onClick="howToPlay"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_drawable"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <View
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/ic_help" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/how_play"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/text" />

    </LinearLayout>

    <LinearLayout
        android:onClick="about"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_drawable"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <View
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/ic_chrome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/text" />

    </LinearLayout>

</LinearLayout>