<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_watch" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_big" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TableLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button_drawable"
                android:clickable="true"
                android:gravity="center"
                android:onClick="giveUp"
                android:orientation="horizontal"
                android:padding="8dp">

                <View
                    android:id="@+id/action_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_hand" />

                <TextView
                    android:id="@+id/actionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/give_up"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_mid"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/transparent_button_drawable"
                android:clickable="true"
                android:gravity="center"
                android:onClick="pause"
                android:orientation="horizontal"
                android:padding="8dp">

                <View
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_pause" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/pause"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_mid"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/score_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:visibility="gone"
                android:id="@+id/trophy"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_trophy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_time"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/final_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/transparent_button_drawable"
            android:clickable="true"
            android:gravity="center"
            android:onClick="resume"
            android:orientation="horizontal"
            android:padding="8dp">

            <View
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_resume" />

            <TextView
                android:id="@+id/resume_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/resume"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_mid"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/transparent_button_drawable"
            android:clickable="true"
            android:gravity="center"
            android:onClick="restart"
            android:orientation="horizontal"
            android:padding="8dp"
            android:tag="retry">

            <View
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_retry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/restart"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_mid"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button_drawable"
            android:clickable="true"
            android:gravity="center"
            android:onClick="quit"
            android:orientation="horizontal"
            android:padding="8dp">

            <View
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/quit"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_mid"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>